Change CSS to fix overflow problem
fixed problem where if screen would be too small it would overflow
without displaying a scrollbar. Also added a minmax to the projects
section so they scale better

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 150px 1fr;
     align-content: flex-end;
-    height: 100vh;
+    min-height: 100vh;
 }
 .sidebar{
     min-width: 100px;
@@ -225,11 +225,12 @@
     grid-row: 1/3;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr)); 
     grid-template-rows: 40px 1fr 1fr 1fr;
 
 }
 .your-projects{
-    grid-column: 1/3;
+    grid-column: 1/-1;
     align-self: flex-end;
     font-weight: bold;
     margin: 0px 20px;
